[package]
name = "skreaver-observability"
version = "0.3.0"
edition = "2024"
authors = ["Oleksandr Husiev <ohusiev@icloud.com>"]
license = "MIT"
description = "Observability and telemetry components for Skreaver agent infrastructure"
repository = "https://github.com/shurankain/skreaver"
homepage = "https://ohusiev.com"
keywords = ["observability", "telemetry", "metrics", "tracing", "monitoring"]
categories = ["development-tools", "observability"]

[features]
default = ["metrics", "tracing"]
metrics = ["dep:prometheus", "dep:tokio"]
tracing = ["dep:tracing", "dep:tracing-opentelemetry", "dep:tracing-subscriber"]
opentelemetry = ["tracing", "dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp"]
health = ["metrics", "dep:serde_json", "dep:async-trait"]
openapi = ["dep:utoipa"]

[dependencies]
# Core dependencies
serde = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["serde"] }

# Metrics
prometheus = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

# Tracing
tracing = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true, features = ["json", "env-filter"] }

# OpenTelemetry
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }

# Health checks
serde_json = { workspace = true, optional = true }
async-trait = { version = "0.1", optional = true }

# OpenAPI schema support
utoipa = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }