[package]
name = "skreaver-testing"
version = "0.1.0"
edition = "2024"
authors = ["Oleksandr Husiev <ohusiev@icloud.com>"]
license = "MIT"
description = "Testing framework and utilities for Skreaver agent infrastructure"
repository = "https://github.com/shurankain/skreaver"
homepage = "https://ohusiev.com"
keywords = ["agent", "testing", "ai", "rust", "framework"]
categories = ["development-tools", "testing"]

[features]
default = ["benchmarks"]
benchmarks = ["criterion"]
integration = ["tokio/test-util"]

[dependencies]
# Core dependencies
skreaver-core = { path = "../skreaver-core", version = "0.1.0" }
skreaver-memory = { path = "../skreaver-memory", version = "0.1.0" }
skreaver-tools = { path = "../skreaver-tools", version = "0.1.0" }
skreaver-http = { path = "../skreaver-http", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
thiserror = "1.0"
uuid = { version = "1", features = ["v4"] }

# Testing utilities
criterion = { version = "0.5", optional = true }
tempfile = "3.8"
wiremock = "0.5"

# Async utilities
futures = "0.3"
tokio-stream = "0.1"

# HTTP client for testing
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"