[package]
name = "skreaver-testing"
version = "0.1.0"
edition = "2024"
authors = ["Oleksandr Husiev <ohusiev@icloud.com>"]
license = "MIT"
description = "Testing framework and utilities for Skreaver agent infrastructure"
repository = "https://github.com/shurankain/skreaver"
homepage = "https://ohusiev.com"
keywords = ["agent", "testing", "ai", "rust", "framework"]
categories = ["development-tools", "testing"]

[features]
default = ["benchmarks"]
benchmarks = ["criterion"]
integration = ["tokio/test-util"]

[dependencies]
# Core dependencies
skreaver-core = { path = "../skreaver-core", version = "0.1.0" }
skreaver-memory = { path = "../skreaver-memory", version = "0.1.0" }
skreaver-tools = { path = "../skreaver-tools", version = "0.1.0" }
skreaver-http = { path = "../skreaver-http", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

# Testing utilities
criterion = { workspace = true, optional = true }
tempfile = { workspace = true }
wiremock = "0.5"

# Async utilities
futures = { workspace = true }
tokio-stream = { workspace = true }

# HTTP client for testing
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio-test = { workspace = true }