[package]
name = "skreaver"
version = "0.4.0"
edition = "2024"
authors = ["Oleksandr Husiev <ohusiev@icloud.com>"]
license = "MIT"
description = "Rust-native coordination runtime for building modular AI agents"
repository = "https://github.com/shurankain/skreaver"
homepage = "https://ohusiev.com"
keywords = ["agent", "infrastructure", "ai", "rust"]
categories = ["development-tools", "ai"]

[features]
default = []  # Core functionality only by default
auth = ["skreaver-http/auth"]
openapi = ["skreaver-http/openapi"]
openapi-ui = ["openapi", "skreaver-http/openapi-ui"]  # Dev builds only
sqlite = ["skreaver-memory/sqlite"]
postgres = ["skreaver-memory/postgres"]
redis = ["skreaver-memory/redis"]
streaming = ["skreaver-http/streaming"]
websocket = ["streaming", "skreaver-http/websocket"]
testing = ["skreaver-testing"]
# Observability features
metrics = ["dep:skreaver-observability", "skreaver-observability/metrics"]
tracing = ["dep:skreaver-observability", "skreaver-observability/tracing"]
observability = ["metrics", "tracing", "skreaver-observability/health"]
opentelemetry = ["observability", "skreaver-observability/opentelemetry"]

[dependencies]
skreaver-core = { path = "../skreaver-core", version = "0.4.0" }
skreaver-memory = { path = "../skreaver-memory", version = "0.4.0" }
skreaver-tools = { path = "../skreaver-tools", version = "0.4.0" }
skreaver-http = { path = "../skreaver-http", version = "0.4.0" }
skreaver-testing = { path = "../skreaver-testing", version = "0.4.0", optional = true }
skreaver-observability = { path = "../skreaver-observability", version = "0.4.0", optional = true }